force-app/main/default/objects/BMCServiceDesk__BMC_NetworkPort__c/BMCServiceDesk__BMC_NetworkPort__c.object-meta.xml
<CustomObject>
    <description>BMC_NetworkPort. CMDB Class used to store information about interfaces that connect network drives to computer systems. Each instance of this class is related to the computer system by a BMC_HostedSystemComponents relationship. This class corresponds to the DMTF CIM_NetworkPort class.</description>
    <label>Network Port</label>
    <nameField>
        <label>Network Port Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>