force-app/main/default/objects/BMCServiceDesk__BMC_NetworkPort__c/fields/BMCServiceDesk__Network_Addresses__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Network_Addresses__c</fullName>
    <label>Network Addresses</label>
    <length>64</length>
    <type>Text</type>
</CustomField>