force-app/main/default/objects/BMCServiceDesk__BMC_NetworkPort__c/fields/BMCServiceDesk__Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>