force-app/main/default/objects/BMCServiceDesk__BMC_NetworkPort__c/fields/BMCServiceDesk__Speed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Speed__c</fullName>
    <label>Speed</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>